# StupiPHI

./: .gitignore  DATA_FLOW.txt  DEMO_SCRIPT.md  DESIGN.md  README.md  SYSTEM_OVERVIEW.txt  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
audit/: __init__.py  audit_log.py
config/: __init__.py  example.yaml  load.py
detection/: __init__.py  detector_base.py  hf_detector.py  rule_detector.py  structured_detector.py
docker/: compose.yml
docker/init/: 001_schema.sql  002_seed.sql
evals/: __init__.py  labeled_dataset.py  labels.py  metrics.py
examples/: quickstart.py
ingestion/: __init__.py  synthetic_generator.py
model_training/: train_phi_ner.py
models/: __init__.py
sanitizer/: __init__.py  pipeline.py
scripts/: detection_smoke_test.py  generate_synthetic_data.py  hf_smoke_test.py  record_smoke_test.py  run_evaluation.py  sanitize_smoke_test.py
src/stupiphi/: __init__.py  cli.py
src/stupiphi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/stupiphi/audit/: __init__.py  audit_log.py
src/stupiphi/config/: __init__.py  example.yaml  load.py
stupiphi/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_apply.py  test_audit.py  test_case_transfer.py  test_case_transfer_integration.py  test_config.py  test_db_policy.py  test_db_verify.py  test_integration.py  test_map_to_canonical.py  test_plan.py  test_replay_sql.py  test_structured_detector.py  test_verify.py
transformation/: __init__.py  apply.py  plan.py  pseudonymizer.py
verification/: __init__.py  verify.py
(+30 files in other folders)
